--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "start": "node ./build/cli.js start",
+    "build": "node ./build/cli.js build",
+    "lint": "node ./build/cli.js lint",
+    "lint:diff": "node ./scripts/pre-commit-diff.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -18,22 +19,25 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "@vue/eslint-config-prettier": "^4.0.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^4.3.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
+    "path": "^0.12.7",
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
+    "shelljs": "^0.8.4",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.9.0"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
+  
   "browserslist": [
     "> 1%",
     "last 2 versions",
