--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^4.3.0",
+    "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
     "path": "^0.12.7",
@@ -36,7 +36,8 @@
     "prettier-eslint": "^11.0.0",
     "shelljs": "^0.8.4",
     "vue-template-compiler": "^2.6.11",
-    "webpack-bundle-analyzer": "^3.9.0"
+    "webpack-bundle-analyzer": "^3.9.0",
+    "yorkie": "^2.0.0"
   },
   "browserslist": [
     "> 1%",
