--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./build/cli.js start",
     "build": "node ./build/cli.js build",
     "lint": "node ./build/cli.js lint",
-    "lint:diff": "node ./scripts/pre-commit-diff.js"
+    "prelint": "node ./scripts/pre-commit-diff.js"
   },
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -45,6 +45,6 @@
     "not dead"
   ],
   "gitHooks": {
-    "pre-commit": "npm run lint:diff"
+    "pre-commit": "npm run prelint"
   }
 }
