--- a/package.json
+++ b/package.json
@@ -1,56 +1,21 @@
 {
-  "name": "vue3",
-  "version": "0.1.0",
+  "name": "mylabvitevue",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "node ./build/cli.js start",
-    "build": "node ./build/cli.js build",
-    "lint": "node ./build/cli.js lint",
-    "lint:diff": "node ./scripts/pre-commit-diff.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^4.0.1",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.1.0",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^4.3.0",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.1",
-    "path": "^0.12.7",
-    "prettier": "^2.1.2",
-    "prettier-eslint": "^11.0.0",
-    "shelljs": "^0.8.4",
-    "vue-template-compiler": "^2.6.11",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "yorkie": "^2.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,vue}": [
-      "npm run lint:diff",
-      "git add"
-    ]
+    "@vitejs/plugin-vue": "^2.2.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
+    "vite": "^2.8.0"
   }
 }
